--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -1,10 +1,7 @@
-name: 'Terraform'
+name: 'GitOps'
 
 on:
-  push:
-    branches:
-    - master
-  pull_request:
+  workflow_dispatch:
 
 jobs:
   terraform:
@@ -34,13 +31,13 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
     
-    # Create container in storage account (or ensure it was previously created)
-    - name: Azure CLI script
-      uses: azure/CLI@v1
-      with:
-        azcliversion: 2.20.0
-        inlineScript: |
-          az storage container create --name tfstate --account-name stkubernet --resource-group blog        
+#     # Create container in storage account (or ensure it was previously created)
+#     - name: Azure CLI script
+#       uses: azure/CLI@v1
+#       with:
+#         azcliversion: 2.20.0
+#         inlineScript: |
+#           az storage container create --name tfstate --account-name stkubernet --resource-group blog        
     
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token 
     - name: Setup Terraform
@@ -50,9 +47,9 @@ jobs:
     - name: Terraform Init
       run: terraform init -input=false
 
-    # Checks that all Terraform configuration files adhere to a canonical format
-    - name: Terraform Format
-      run: terraform fmt -check
+#     # Checks that all Terraform configuration files adhere to a canonical format
+#     - name: Terraform Format
+#       run: terraform fmt -check
 
     # Generates an execution plan for Terraform
     - id: terraform_plan
